--- a/project4/src/main/webapp/css/list.css
+++ b/project4/src/main/webapp/css/list.css
@@ -44,22 +44,41 @@ article.slide .cont .txtWrap .item-tit {text-decoration: none;}
     .list-page ul.list .item {width: calc(96% / 2);margin-left:4%;}
     .list-page ul.list .item:nth-child(n+3) {margin-top:4%;}
     .list-page ul.list .item:nth-child(2n-1) {margin-left:0}
+    article.share-photo {
+        margin-top: 40px;
+        padding:20px;
+        box-sizing: border-box;
+        width: 90%;
+    }
 
     article.share-photo .imgWrap {
         width: 80%;
         height: 100%;
         max-height: 500px;
     }
+    article.list-page {
+        width: 90%;
+        margin: 40px auto 0;
+    }
 }
 
 @media screen and (max-width:419px) {
     .list-page ul.list .item {display: inline-block;width: 100%;margin-left:0 !important;margin-top:4%}
     .list-page ul.list .item:first-child {margin-top:0;}
-
+    article.share-photo {
+        margin-top: 40px;
+        padding:20px;
+        box-sizing: border-box;
+        width: 90%;
+    }
     article.share-photo .imgWrap {
         width: 90%;
         height: 100%;
         max-height: 300px;
+    }
+    article.list-page {
+        width: 90%;
+        margin: 40px auto 0;
     }
 }
 
